Fixed not showing form on the home page

--- a/style.css
+++ b/style.css
@@ -340,7 +340,7 @@ a:link {
   margin-bottom: 150px;
 }
 
-.contact-form {
+.contact-section-form {
   transform: translateX(-30%);
   opacity: 0;
 }
